<resources>
    <string name="app_name">GH SO App</string>
    <string name="app_subtitle">Smart Industrial Apps</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="display">Display</string>
    <string name="name">Name</string>
    <string name="quantity">Quantity :</string>
    <string name="logout">Logout</string>
    <string name="txtCredits"><a href="https://sminds-ghi-v2.dyndns.org/password/reset">Forgot Password</a></string>
    <string name="login">Login</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="default_order">Product | Grade | Head | Thread | Pitch | Length | Standard | Finish | Quantity | Unit | Description | Price </string>
    <string name="sale_type_1">Sales</string>
    <string name="sale_type_2">JobWork</string>
    <string name="order_from_1">WhatsApp</string>
    <string name="order_from_2">Email</string>
    <string name="order_from_3">Verbal</string>
    <string name="form_type_1">Coil</string>
    <string name="form_type_2">Sheet</string>
    <string name="form_type_3">Strip</string>
    <string name="unit_type_1">mm</string>
    <string name="unit_type_2">inch</string>
    <string name="unit_type_3">gauge</string>
    <string name="unit_type_4">feet</string>
    <string name="thickness">Thickness :</string>
    <string name="width">Width :</string>
    <string name="length">Length :</string>
    <string name="quantity_unit_type_1">kgs</string>
    <string name="quantity_unit_type_2">pcs</string>
    <string name="quantity_unit_type_3">meter</string>
    <string name="rate">Rate :</string>
    <string name="hardness_type_1">Soft</string>
    <string name="hardness_type_2">Half Hard</string>
    <string name="hardness_type_3">Hard</string>
    <string name="hardness_type_4">QH</string>
    <string name="hardness_min">Hardness Min</string>
    <string name="hardness_max">Hardness Max</string>
    <string name="item_code">Party Item Code</string>
    <string name="so_note">SO Note</string>
    <string name="WhatsApp_no">"+919998367174"</string>
    <string name="composition">Composition</string>
    <string name="cancel">Cancel</string>
    <string name="unit">Unit :</string>
    <string name="form">Form :</string>
    <string name="save">Save</string>
    <string name="hardness">Hardness :</string>
    <string name="compo_hint">CuZn40</string>
    <string name="party_name">Party Name:</string>
    <string name="notes">Notes :</string>
    <string name="sales_type">Sales Type :</string>
    <string name="po_date">PO date :</string>
    <string name="po_number">PO Number :</string>
    <string name="clear">Clear</string>
    <string name="party_name_hint">G.H. Industries</string>
    <string name="Edit_so_description">Edit Order</string>
    <string name="copy_so_description">Copy Order</string>
    <string name="date_hint">10-09-2023</string>
    <string name="compo_default">CuZn37</string>
</resources>
