<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d3d3d3"
    android:gravity="top"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <EditText
        android:id="@+id/etusername"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="#fff"
        android:hint="@string/enter_username"
        android:textColorHint="#95757575"
        android:inputType="text"
        android:paddingStart="5dp"
        tools:ignore="TextContrastCheck" />
    <EditText
        android:id="@+id/etpassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="#fff"
        android:hint="@string/enter_password"
        android:textColorHint="#95757575"
        android:inputType="textPassword"
        android:paddingStart="5dp"
        tools:ignore="TextContrastCheck" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn"
        android:text="@string/login"
        android:background="@color/colorPrimary"
        android:textColor="#fff"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <TextView
        android:id="@+id/tvreg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="150dp"
        android:paddingTop="10dp"
        android:text="@string/txtCredits"
        android:textColor="#AD1457"
        android:textColorLink="@android:color/holo_red_dark"
        tools:ignore="TextContrastCheck" />
</LinearLayout>